# ralph-autocoder

./: .gitignore  README.md  SETUP_NOTES.md  example_test.md  package-lock.json  package.json  pyproject.toml  requirements.txt
ralph/: __init__.py
ralph/agent/: __init__.py  client.py  hooks.py  output.py  permissions.py  spec_session.py
ralph/cli/: __init__.py  commands.py  config.py  main.py  registry.py  tui.py  utils.py
ralph/prompts/: __init__.py  loop.md  loop_duplication.md  loop_entropy.md  loop_linting.md  loop_test_coverage.md  once.md  spec.md  spec_context_existing.md  spec_context_file.md  spec_context_new.md
ralph/templates/: PRD.json  PRD.schema.json  failures.md  progress.txt
