[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ralph-autocoder"
version = "2.0.0"
description = "Ralph CLI - AI Coding Loop Manager for autonomous code generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "textual>=0.50.0",
]
authors = [
    {name = "Ralph Autocoder"}
]
keywords = ["ai", "coding", "automation", "claude", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
]

[project.scripts]
ralph = "ralph.cli.main:main"

[project.urls]
Homepage = "https://github.com/your-username/ralph-autocoder"
Documentation = "https://github.com/your-username/ralph-autocoder#readme"
Repository = "https://github.com/your-username/ralph-autocoder"

[tool.setuptools.packages.find]
where = ["."]
include = ["ralph*"]

[tool.setuptools.package-data]
"ralph.templates" = ["*.json", "*.txt"]
"ralph.prompts" = ["*.md"]
